fix: fix swagger docs
