# docs/swagger.json
@@ -8,9 +8,9 @@
     "host": "localhost:9000",
     "basePath": "/",
     "paths": {
-        "/v1/questions": {
-            "get": {
-                "description": "Get all secret questions",
+        "/v1/auth/login": {
+            "post": {
+                "description": "login",
                 "consumes": [
                     "application/json"
                 ],
@@ -18,7 +18,84 @@
                     "application/json"
                 ],
                 "tags": [
-                    "questions"
+                    "auth"
+                ],
+                "summary": "Login",
+                "operationId": "login-user",
+                "parameters": [
+                    {
+                        "description": "Enter login, password, type (",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.loginRequestDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/auth/logout": {
+            "post": {
+                "description": "logout",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Logout",
+                "operationId": "logout-user",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/auth/questions": {
+            "get": {
+                "description": "Get all secret questions for future password reset",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
                 ],
                 "summary": "GetQuestions",
                 "operationId": "get-question",
@@ -38,7 +115,7 @@
                 }
             }
         },
-        "/v1/register": {
+        "/v1/auth/register": {
             "post": {
                 "description": "Register new user",
                 "consumes": [
@@ -48,7 +125,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "register"
+                    "auth"
                 ],
                 "summary": "Register",
                 "operationId": "register-user",
@@ -84,21 +161,24 @@
         }
     },
     "definitions": {
-        "entity.SecretQuestion": {
+        "v1.errResponse": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "question": {
+                "message": {
                     "type": "string"
                 }
             }
         },
-        "v1.errResponse": {
+        "v1.loginRequestDTO": {
             "type": "object",
             "properties": {
-                "error": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
@@ -123,13 +203,24 @@
                 }
             }
         },
+        "v1.secretQuestionResponseDTO": {
+            "type": "object",
+            "properties": {
+                "label": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.secretQuestionsResponseDTO": {
             "type": "object",
             "properties": {
-                "questions": {
+                "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/entity.SecretQuestion"
+                        "$ref": "#/definitions/v1.secretQuestionResponseDTO"
                     }
                 }
             }
