# internal/controller/http/v1/logout.go
@@ -14,13 +14,24 @@ type logoutRoutes struct {
 func newLogoutRoutes(handler *gin.RouterGroup, j usecase.JwtContract) {
 	lg := logoutRoutes{j: j}
 
-	handler.POST("/logout", lg.logout)
+	handler.POST("/auth/logout", lg.logout)
 }
 
+// @Summary Logout
+// @Tags auth
+// @Description logout
+// @ID logout-user
+// @Accept json
+// @Produce json
+// @Success 200 {object} nil
+// @Failure 400 {object} errResponse
+// @Failure 401 {object} errResponse
+// @Router /v1/auth/logout [post]
 func (l *logoutRoutes) logout(c *gin.Context) {
 	auth := c.GetHeader("Authorization")
 	if auth == "" {
 		errorResponse(c, http.StatusUnauthorized, "error in header format")
+		return
 	}
 	headerParts := strings.Split(auth, " ")
 	if len(headerParts) != 2 {
